Enable deprecated SecurityManager
From JDK18, usages of SecurityManager will throw an exception unless the
usage is enabled via java.security.manager=allow.

Bug: 302171264
Test: Manual check
Change-Id: Ie768c396bee99d77761efaf9a21516bd331730fa